написаны тесты, пересмотрена и переписана валидация категории блюд